# LLM-Evaluation-Framework

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: index.html
huggingface/: README.md  create_dataset.py
llm_eval/: __init__.py
llm_eval/api/: __init__.py  main.py
llm_eval/benchmarks/: __init__.py  custom.py  mmlu.py  truthfulqa.py
llm_eval/cli/: __init__.py  main.py
llm_eval/core/: __init__.py  evaluator.py
llm_eval/dashboard/: app.py
llm_eval/database/: __init__.py  models.py
llm_eval/metrics/: __init__.py  accuracy.py  cost.py  hallucination.py  latency.py
llm_eval/reports/: __init__.py  generator.py
tests/: test_evaluator.py
